刪除排除檔案介面部分

--- a/CheckDuplicateFileName/Base.lproj/Main.storyboard
+++ b/CheckDuplicateFileName/Base.lproj/Main.storyboard
@@ -148,7 +148,7 @@
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8W-Pv-HVB">
                                 <rect key="frame" x="30" y="52" width="450" height="198"/>
                                 <clipView key="contentView" id="p9y-EP-N1r">
-                                    <rect key="frame" x="1" y="23" width="448" height="174"/>
+                                    <rect key="frame" x="1" y="0.0" width="448" height="197"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="WOw-zm-MId" viewBased="YES" id="lIb-3a-OlV">
@@ -204,7 +204,7 @@
                                     <rect key="frame" x="1" y="119" width="223" height="15"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="x5P-be-2rJ">
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="x5P-be-2rJ">
                                     <rect key="frame" x="224" y="17" width="15" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
