--- a/FindDuplicateFileName/Base.lproj/Main.storyboard
+++ b/FindDuplicateFileName/Base.lproj/Main.storyboard
@@ -224,7 +224,7 @@
                             <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iXW-OL-0TZ">
                                 <rect key="frame" x="31" y="189" width="41" height="19"/>
                                 <segmentedCell key="cell" controlSize="mini" borderStyle="border" alignment="left" style="smallSquare" trackingMode="momentary" id="6ON-BF-g1r">
-                                    <font key="font" metaFont="miniSystem"/>
+                                    <font key="font" metaFont="label" size="9"/>
                                     <segments>
                                         <segment image="NSAddTemplate"/>
                                         <segment image="NSRemoveTemplate" enabled="NO" tag="1"/>
@@ -237,7 +237,7 @@
                             <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="784-HS-mz6">
                                 <rect key="frame" x="438" y="19" width="41" height="19"/>
                                 <segmentedCell key="cell" controlSize="mini" borderStyle="border" alignment="left" style="smallSquare" trackingMode="momentary" id="Gpl-Do-b3G">
-                                    <font key="font" metaFont="miniSystem"/>
+                                    <font key="font" metaFont="label" size="9"/>
                                     <segments>
                                         <segment image="NSAddTemplate"/>
                                         <segment image="NSRemoveTemplate" enabled="NO" tag="1"/>
@@ -416,69 +416,36 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1PV-yo-DUh">
-                                <rect key="frame" x="30" y="140" width="130" height="130"/>
+                                <rect key="frame" x="30" y="130" width="130" height="130"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="130" id="Ucn-Ie-nUc"/>
                                     <constraint firstAttribute="width" secondItem="1PV-yo-DUh" secondAttribute="height" multiplier="1:1" id="rBx-XT-aM8"/>
                                 </constraints>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" image="WolfLogo" id="xIk-Aw-iHO"/>
                             </imageView>
-                            <segmentedControl verticalHuggingPriority="750" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vnn-Nj-uuq">
-                                <rect key="frame" x="62" y="56" width="67" height="23"/>
-                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="texturedSquare" trackingMode="selectOne" id="UsO-Lo-fjF">
-                                    <font key="font" metaFont="system"/>
-                                    <segments>
-                                        <segment width="30"/>
-                                        <segment width="30" tag="1"/>
-                                    </segments>
-                                </segmentedCell>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aGH-m2-Wr4">
+                                <rect key="frame" x="44" y="28" width="102" height="18"/>
+                                <buttonCell key="cell" type="check" title="儲存搜尋設定" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="lzu-4p-kag">
+                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                    <font key="font" size="13" name=".PingFangTC-Regular"/>
+                                </buttonCell>
                                 <connections>
-                                    <action selector="saveSearchSegmentControlPressed:" target="Me5-Ig-8Zm" id="jIO-wB-VE6"/>
+                                    <action selector="didClickPreferenceButton:" target="Me5-Ig-8Zm" id="8i0-Df-PwC"/>
                                 </connections>
-                            </segmentedControl>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gVm-Ol-q6D">
-                                <rect key="frame" x="40" y="94" width="111" height="16"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="是否儲存搜尋設定" id="KTq-eY-ms8">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HFi-U0-IUp">
-                                <rect key="frame" x="137" y="58" width="22" height="20"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="是" id="ngE-0d-NXK">
-                                    <font key="font" metaFont="system" size="17"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eik-Xh-toB">
-                                <rect key="frame" x="32" y="58" width="22" height="20"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="否" id="lL0-br-of7">
-                                    <font key="font" metaFont="system" size="17"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
+                            </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="eik-Xh-toB" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RBd-p6-DWW" secondAttribute="leading" id="6oB-Jy-Z0R"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="HFi-U0-IUp" secondAttribute="trailing" id="7R9-jU-Sdg"/>
-                            <constraint firstItem="gVm-Ol-q6D" firstAttribute="centerX" secondItem="1PV-yo-DUh" secondAttribute="centerX" id="D1I-uU-DIH"/>
-                            <constraint firstItem="eik-Xh-toB" firstAttribute="centerY" secondItem="Vnn-Nj-uuq" secondAttribute="centerY" id="Dc8-6f-N71"/>
-                            <constraint firstItem="1PV-yo-DUh" firstAttribute="leading" secondItem="RBd-p6-DWW" secondAttribute="leading" constant="30" id="EsC-UN-4lQ"/>
-                            <constraint firstItem="gVm-Ol-q6D" firstAttribute="top" secondItem="1PV-yo-DUh" secondAttribute="bottom" constant="30" id="INc-9u-Fsh"/>
-                            <constraint firstItem="Vnn-Nj-uuq" firstAttribute="top" secondItem="gVm-Ol-q6D" secondAttribute="bottom" constant="15" id="NGb-I8-UdL"/>
-                            <constraint firstAttribute="trailing" secondItem="1PV-yo-DUh" secondAttribute="trailing" constant="30" id="SR0-yW-KgN"/>
-                            <constraint firstItem="HFi-U0-IUp" firstAttribute="leading" secondItem="Vnn-Nj-uuq" secondAttribute="trailing" constant="10" id="Tiu-ew-ByX"/>
-                            <constraint firstItem="1PV-yo-DUh" firstAttribute="top" secondItem="RBd-p6-DWW" secondAttribute="top" constant="30" id="WXy-tb-haz"/>
-                            <constraint firstItem="HFi-U0-IUp" firstAttribute="centerY" secondItem="Vnn-Nj-uuq" secondAttribute="centerY" id="cRm-VA-SDH"/>
-                            <constraint firstItem="Vnn-Nj-uuq" firstAttribute="leading" secondItem="eik-Xh-toB" secondAttribute="trailing" constant="10" id="fDZ-8A-rsR"/>
-                            <constraint firstItem="Vnn-Nj-uuq" firstAttribute="centerX" secondItem="1PV-yo-DUh" secondAttribute="centerX" id="jWE-Nf-udP"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aGH-m2-Wr4" secondAttribute="trailing" constant="30" id="3rm-Bv-ioq"/>
+                            <constraint firstItem="aGH-m2-Wr4" firstAttribute="centerX" secondItem="1PV-yo-DUh" secondAttribute="centerX" id="8uM-VI-lRM"/>
+                            <constraint firstItem="1PV-yo-DUh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RBd-p6-DWW" secondAttribute="leading" constant="30" id="EsC-UN-4lQ"/>
+                            <constraint firstAttribute="bottom" secondItem="aGH-m2-Wr4" secondAttribute="bottom" constant="30" id="FZ8-jf-eO9"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1PV-yo-DUh" secondAttribute="trailing" constant="30" id="SR0-yW-KgN"/>
+                            <constraint firstItem="aGH-m2-Wr4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RBd-p6-DWW" secondAttribute="leading" constant="30" id="Uya-tk-5ZL"/>
+                            <constraint firstItem="1PV-yo-DUh" firstAttribute="top" secondItem="RBd-p6-DWW" secondAttribute="top" constant="40" id="WXy-tb-haz"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="saveSearchSettingsSegmentedControl" destination="Vnn-Nj-uuq" id="BCd-ag-6m2"/>
+                        <outlet property="savePreferenceCheckBox" destination="aGH-m2-Wr4" id="MW1-Zh-fHw"/>
                     </connections>
                 </viewController>
                 <customObject id="2zZ-jI-LnO" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
