--- a/DuplicateFinder/Base.lproj/Main.storyboard
+++ b/DuplicateFinder/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="FindDuplicateFileName" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="DuplicateFinder" customModuleProvider="target"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="92" y="-160"/>
@@ -115,7 +115,7 @@
         <!--Select Directory View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="SelectDirectoryViewController" customModule="FindDuplicateFileName" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="SelectDirectoryViewController" customModule="DuplicateFinder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="510" height="437"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -410,7 +410,7 @@
         <!--Logo Info View Controller-->
         <scene sceneID="XE4-9r-jX4">
             <objects>
-                <viewController id="Me5-Ig-8Zm" customClass="LogoInfoViewController" customModule="FindDuplicateFileName" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Me5-Ig-8Zm" customClass="LogoInfoViewController" customModule="DuplicateFinder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="RBd-p6-DWW">
                         <rect key="frame" x="0.0" y="0.0" width="190" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -427,7 +427,7 @@
                                 <rect key="frame" x="44" y="28" width="102" height="18"/>
                                 <buttonCell key="cell" type="check" title="儲存搜尋設定" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="lzu-4p-kag">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                    <font key="font" size="13" name=".PingFangTC-Regular"/>
+                                    <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
                                     <action selector="didClickPreferenceButton:" target="Me5-Ig-8Zm" id="8i0-Df-PwC"/>
@@ -476,7 +476,7 @@
         <!--Search File Name Result View Controller-->
         <scene sceneID="89e-Ut-xAm">
             <objects>
-                <viewController id="rZF-QJ-B0D" customClass="SearchFileNameResultViewController" customModule="FindDuplicateFileName" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="rZF-QJ-B0D" customClass="SearchFileNameResultViewController" customModule="DuplicateFinder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="6Fw-Cu-BO1">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="276"/>
                         <autoresizingMask key="autoresizingMask"/>
